2009-12-25  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/dcpi1_divappr_q.c: Handle 2n/n properly.  Don't use full
	precision in mpn_sbpi1_divappr_q call.  Misc cleanup.

	* tune/tuneup.c (tune_mod_1): Add a check_size for
	PREINV_MOD_1_TO_MOD_1_THRESHOLD.

2009-12-24  Torbjorn Granlund  <tege@gmplib.org>

	* tune/mod_1_div.c (MOD_1N_TO_MOD_1_1_THRESHOLD,
	(MOD_1U_TO_MOD_1_1_THRESHOLD): Set.
	* tune/mod_1_inv.c (MOD_1N_TO_MOD_1_1_THRESHOLD,
	(MOD_1U_TO_MOD_1_1_THRESHOLD): Set.

	* gmp-impl.h (USE_PREINV_MOD_1): Remove.
	(MPN_MOD_OR_PREINV_MOD_1): Define to choose functions dynamically in
	terms of PREINV_MOD_1_TO_MOD_1_THRESHOLD (used to choose statically
	using USE_PREINV_MOD_1).
	* mpn/generic/perfsqr.c (PERFSQR_MOD_PP): Corresponding updates.

	* tune/tuneup.c (tune_mod_1): Rewrite.
	* gmp-impl.h (MOD_1N_TO_MOD_1_1_THRESHOLD): New.
	(MOD_1U_TO_MOD_1_1_THRESHOLD): New name for MOD_1_1_THRESHOLD.
	(MOD_1_1_TO_MOD_1_2_THRESHOLD): Mew name for MOD_1_2_THRESHOLD.
	(MOD_1_2_TO_MOD_1_4_THRESHOLD): New name for MOD_1_4_THRESHOLD.
	* mpn/generic/mod_1.c: Corresponding updates.

2009-12-24  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/mul_n.c: Use also toom6h and toom8h.
	* mpn/generic/sqr_n.c: Use also toom6 and toom8.
	* gmp-impl.h: Initial support for tuning of Toom-6half and Toom-8half.
	* tune/tuneup.c: Tune Toom-6half and Toom-8half thresholds.

2009-12-24  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/mod_1_4.c: Get ASSERT right.
	* mpn/generic/mod_1_3.c: Likewise.
	* mpn/generic/mod_1_2.c: Likewise.

	* mpn/generic/powm_sec.c: Use SQR_TOOM2_THRESHOLD as limit for a native
	mpn_sqr_basecase, not TUNE_SQR_TOOM2_MAX.

2009-12-23  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tune/common.c, tune/speed.c, tune/speed.h: Support for measuring
	mpn_toom8h_mul and mpn_toom8_sqr speed.

	* mpn/generic/toom_eval_pm2exp.c: Fix ASSERTs.

	* mpn/generic/toom8h_mul.c: New file.
	* mpn/generic/toom8_sqr.c: New file.